--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,7 +8,7 @@ on:
 
 permissions:
   id-token: write   # This is required for requesting the JWT
-  contents: read    # This is required for actions/checkoutjobs:
+  contents: write   # read for actions/checkoutjobs, write for vcpkg dependencygraph
 
 jobs:
   msvc:
