--- a/.github/workflows/depgraph.yaml
+++ b/.github/workflows/depgraph.yaml
@@ -25,6 +25,12 @@ jobs:
     - name: Bootstrap vcpkg
       working-directory: src/vcpkg
       run: ./bootstrap-vcpkg.sh
-    - name: Run vcpkg
+    - name: vcpkg version
+      working-directory: src/vcpkg
+      run: ./vcpkg version
+    - name: Run vcpkg (openvpn)
       working-directory: src/openvpn/contrib/vcpkg-manifests/windows/
       run: ${{ github.workspace }}/src/vcpkg/vcpkg install --overlay-triplets ${{ github.workspace }}/src/openvpn/contrib/vcpkg-triplets --overlay-ports ${{ github.workspace }}/src/openvpn/contrib/vcpkg-ports --dry-run
+    - name: Run vcpkg (openvpn-gui)
+      working-directory: src/openvpn-gui
+      run: ${{ github.workspace }}/src/vcpkg/vcpkg install --dry-run
