--- a/.github/workflows/renovate.yaml
+++ b/.github/workflows/renovate.yaml
@@ -16,4 +16,4 @@ jobs:
           token: ${{ secrets.RENOVATE_TOKEN }}
         env:
           LOG_LEVEL: debug
-          RENOVATE_REPOSITORIES: "[\"${{ github.repository }}\"]"
+          RENOVATE_REPOSITORIES: "[\"${{ github.repository }}\", \"OpenVPN/openvpn3\"]"
